# hello-sdl2-ios-cmake

./: .cmake.sh  .gitignore  CMakeLists.txt  TODO.md  hello-sdl2-ios.sublime-project
cmake/templates/: platforms.hpp.in
src/: main.mm  platforms.hpp
